
module Cinema
  module DateTime
    module TimeZone
      WEEKDAY_DAYTIME = 1
      WEEKDAY_NIGHTTIME = 2
      HOLIDAY_DAYTIME = 3
      HOLIDAY_NIGHTTIME = 4
      CINEMA_DAY = 5
      WEEKDAY_CINEMA_DAY = 6
    end
  end
end