@startuml
left to right direction

package Cinema{
  
  class Cinema{
    + calculate_sales_csv
    + test_calculate_sales_csv
  }

  package MovieTicket{
    class TicketCounter {
      + visit_customer()
      + calculate_sales()
      + calculate_each_movie_sales()
      + calculate_each_ticket_type_sales()
    }

    class Ticket {
      + title: String
      + screening_time: Datetime
      + price: Integer
      + price_type: PriceGradeType
      + initialize()
      + issue
    }

    package TicketType {
      class TicketTypeFactory{
        + create()
      }
      
      class TicketPriceDivide {
        - get_ticket_price()
      }

      class CinemaCitizenSenior {
        + price: Integer
        + name: String
        + initialize()
      }
      class CinemaCitizen {
        + price: Integer
        + name: String
        + initialize()
      }
      class CollegeStudent {
        + price: Integer
        + name: String
        + initialize()
      }
      class ElementarySchoolStudent {
        + price: Integer
        + name: String
        + initialize()
      }
      class HandicappedHighSchool {
        + price: Integer
        + name: String
        + initialize()
      }
      class Handicapped {
        + price: Integer
        + name: String
        + initialize()
      }
      class HighSchoolStudent {
        + price: Integer
        + name: String
        + initialize()
      }
      class TicketPriceDivide {
        + price: Integer
        + name: String
        + initialize()
      }
      class Senior {
        + price: Integer
        + name: String
        + initialize()
      }
      class HandicappedCinemaCitizen {
        + price: Integer
        + name: String
        + initialize()
      }
    }
  }

  package DateTime{
    class CinemaTime {
      + time_division: TimeZone
    }

    enum TimeZone {
      WEEKDAY_DAYTIME
      WEEKDAY_NIGHTTIME
      HOLIDAY_DAYTIME
      HOLIDAY_NIGHTTIME
      CINEMA_DAY
      WEEKDAY_CINEMA_DAY
    }
  }
}

Cinema --- TicketCounter
TicketCounter -- CinemaTime
TicketCounter - Ticket
Ticket -left- TicketTypeFactory

Ticket -- CinemaCitizenSenior 
Ticket -- CinemaCitizen
Ticket -- CollegeStudent
Ticket -- ElementarySchoolStudent
Ticket -- HandicappedHighSchool
Ticket -- Handicapped
Ticket -- HighSchoolStudent
Ticket -- Senior
Ticket -- HandicappedCinemaCitizen

TicketTypeFactory -- CinemaCitizenSenior 
TicketTypeFactory -- CinemaCitizen
TicketTypeFactory -- CollegeStudent
TicketTypeFactory -- ElementarySchoolStudent
TicketTypeFactory -- HandicappedHighSchool
TicketTypeFactory -- Handicapped
TicketTypeFactory -- HighSchoolStudent
TicketTypeFactory -- Senior
TicketTypeFactory -- HandicappedCinemaCitizen

CinemaCitizenSenior -down- TicketPriceDivide
CinemaCitizen -down- TicketPriceDivide
CollegeStudent -down- TicketPriceDivide
ElementarySchoolStudent -down- TicketPriceDivide
HandicappedHighSchool -down- TicketPriceDivide
Handicapped -down- TicketPriceDivide
HighSchoolStudent -down- TicketPriceDivide
Senior -down- TicketPriceDivide
CinemaTime -down- TimeZone
TicketPriceDivide --- TimeZone

class TicketPriceDivide
note right: Moduleです
@enduml 